<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_margin="10dp"
        android:layout_weight="0.34" 
                />

    <TableLayout
        android:id="@+id/tableLayoutKetqua"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:padding="0dip" >

            <Button
                android:id="@+id/button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/button_create"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/button_view"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:padding="0dip" >

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/button_delete"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/button_move"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:padding="0dip" >

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/button_search"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sendMessage"
                android:text="@string/button_translate"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp" >

            <Button
                android:id="@+id/button_deleteall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="sendMessage"
                android:text="@string/button_delete_all"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp" >

            <Button
                android:id="@+id/button_selecttodelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="sendMessage"
                android:text="@string/button_select_to_delete"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>